got all of my server tests working

--- a/app/templates/views/create_user.html
+++ b/app/templates/views/create_user.html
@@ -7,5 +7,6 @@
 		<label for="password_confirmation">Confirmation: </label>
 		<input type="password" name="password_confirmation" data-ng-model="user.password_confirmation">
 		<button type="submit">Create User</button>
+		<a href="#/sign_in">Sign-In</a>
 	</form>
 </section>
