--- a/app/templates/views/sign_in.html
+++ b/app/templates/views/sign_in.html
@@ -5,5 +5,6 @@
 		<label for="password">Password: </label>
 		<input type="password" name="password" data-ng-model="user.password">
 		<button type="submit">Sign In</button>
+		<a href="#/create_user">Create User</a>
 	</form>
 </section>
